# rust.nix

./: .coderabbit.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml  templates.yaml
nix/: lib.nix
src/: main.rs
templates/ci/.github/workflows/: ci.yaml
templates/nix/: .envrc  flake.nix
